2002-06-12  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c:
	* generic/tcl.decls:
	* generic/tclDecls.h: made code for Tcl_FSNewNativePath
	agree with man pages.
	
	* doc/FileSystem.3: clarified the circumstances under which
	certain functions are called in the presence of symlinks.
	
	* win/tclWinFile.c:
	* win/tclWinPort.h: 
	* win/tclWinInt.h: 
	* win/tclWinFCmd.c:  Fix for Windows to allow 'file lstat', 
	'file type', 'glob -type l', 'file copy', 'file delete', 
	'file normalize', and all VFS code to work correctly in the 
	presence of symlinks (previously Tcl's behaviour was not very 
	well defined).  This also fixes possible serious problems in 
	all versions of WinTcl where 'file delete' on a NTFS symlink 
	could delete the original, not the symlink.
	Note: symlinks cannot yet be created in pure Tcl.

2002-06-11  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c: 
	* generic/tclCompCmds.c:
	* generic/tclInt.h: reverted the new compilation functions;
	replaced by a more general approach described below.

	* generic/tclCompCmds.c:
	* generic/tclCompile.c: made *all* compiled variable access
	attempts create an indexed variable - even get or incr without
	previous set. This allows indexed access to local variables that
	are created and set at runtime, for example by [global], [upvar],
	[variable], [regexp], [regsub].

2002-06-11  Miguel Sofer  <msofer@users.sourceforge.net>

	* doc/global.n:
	* doc/info.n:
	* test/info.test:
	* generic/tclCmdIL.c: fix for [Bug 567386], [info locals] was
	reporting some linked variables.
	
	* generic/tclBasic.c: 
	* generic/tclCompCmds.c:
	* generic/tclInt.h: added compile functions for [global],
	[variable] and [upvar]. They just declare the new local variables,
	the commands themselves are not compiled-in. This gives a notably
	faster read access to these linked variables.

2002-06-11  Miguel Sofer  <msofer@users.sourceforge.net>
